Try z-index fix for safari and overscroll-behavior for android chrome

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: teal;
   color: white;
+  overscroll-behavior: contain;
 }
 
 input[type="number"] {
